--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Generic Error Page</title>
 </head>
 <body>
     <h1>This is a generic error page!</h1>
+
 </body>
 </html>
