--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>500</title>
 </head>
 <body>
     <h1>500 Internal Server Error</h1>
+    <table>
+        <tr><td>Timestamp:</td><td th:text="${timestamp}"></td></tr>
+        <tr><td>Status:</td><td th:text="${status}"></td></tr>
+        <tr><td>Error:</td><td th:text="${error}"></td></tr>
+        <tr><td>Message:</td><td th:text="${message}"></td></tr>
+        <tr><td>Path:</td><td th:text="${path}"></td></tr>
+    </table>
 </body>
 </html>
